syntax = "proto3";
package com;

service StreamService {
  rpc SendRequest (Request) returns (stream Response) {}
}

service Duplex {
  rpc StreamRequest (stream Request) returns (stream Response) {}
}


message AckNak {
  string body = 1;
}

service AckNakService {
  rpc Healthy(AckNak) returns (AckNak) {}
}

message Request {
  int32 id = 1;
  bytes data =2;
  string meta =3;
  int64 time =4;
}

message Response {
  int32 request_id= 1;
  string meta =2;
  string result = 3;
  bytes data =4;
  int64 request_time =5;
  int64 time=6;
 
  
  
}